--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+node_modules/
 
 # dependencies
-client/node_modules
 client/.pnp
 .pnp.js
 
@@ -21,6 +21,3 @@ client/build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-server/node_modules
-server/docs/swagger-output.json
