프로젝트 의존성 패키지 설치하는 과정 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,9 @@ jobs:
             - name: Save PM2 process list
               run: pm2 save
 
+            - name: Install Project Dependencies
+              run: npm ci
+
             - name: Release
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
