fix: 버전 동기화 파일명 버그 수정

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,7 +6,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "node scripts/update-versions.js ${nextRelease.version}"
+        "prepareCmd": "node sync-versions.js ${nextRelease.version}"
       }
     ],
     [
