chore: CHANGELOG 타이틀 앞에 emoji 추가

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,7 +2,23 @@
   "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "conventionalcommits",
+        "presetConfig": {
+          "types": [
+            { "type": "feat", "section": "✨ Features" },
+            { "type": "fix", "section": "🐛 Bug Fixes" },
+            { "type": "chore", "section": "🛠 Chores" },
+            { "type": "docs", "section": "📝 Documentation" },
+            { "type": "refactor", "section": "♻️ Refactoring" },
+            { "type": "test", "section": "✅ Tests" },
+            { "type": "perf", "section": "⚡ Performance" }
+          ]
+        }
+      }
+    ],
     [
       "@semantic-release/exec",
       {
