--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "semantic-release": "^24.2.3"
   }
 }
